--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ category_dir: categories
 code_dir: downloads/code
 i18n_dir: :lang
 skip_render:
+ - 404.html
 
 # Writing
 new_post_name: :year/:month/:title.md # File name of new posts
